Now group is saved online with Mongolab.

--- a/index.html
+++ b/index.html
@@ -112,159 +112,10 @@
     <script type="text/javascript" src="js/materialize.js"></script>
     <script type="text/javascript" src="js/angular.js"></script>
     <script type="text/javascript" src="js/nprogress.js"></script>
-    <script>
-        var app = angular.module('app', []);
-
-        //Initialize Facebook service
-        app.factory('fbService', ['$window', '$q', function ($window, $q) {
-            return {
-                init: function () {
-                    var df = $q.defer();
-                    $window.fbAsyncInit = function () {
-                        FB.init({
-                            appId: '1427665520889672',
-                            cookie: true,
-                            xfbml: false,
-                            version: 'v2.2'
-                        });
-                        df.resolve("Facebook SDK Loaded.");
-                    };
-                    return df.promise;
-                },
-                getStatus: function () {
-                    var df = $q.defer();
-                    FB.getLoginStatus(function (response) {
-                        if (response.status === 'connected') {
-                            FB.api('/me', function (apiResponse) {
-                                df.resolve(apiResponse);
-                            });
-                        } else if (response.status === 'not_authorized') {
-                            df.reject('Please log into this app.');
-                        } else {
-                            df.reject('Please log into facebook');
-                        };
-                    });
-                    return df.promise;
-                },
-                login: function () {
-                    var df = $q.defer();
-                    FB.login(function (response) {
-                        if (response.status === 'connected') {
-                            FB.api('/me', function (apiResponse) {
-                                df.resolve(apiResponse);
-                            });
-                        } else if (response.status === 'not_authorized') {
-                            df.reject('Please log into this app.');
-                        } else {
-                            df.reject('Please log into facebook');
-                        };
-                    }, { scope: 'public_profile,email,publish_actions' });
-                    return df.promise;
-                },
-
-                postMessage: function (groupId, message, link) {
-                    var df = $q.defer();
-                    FB.api("/" + groupId + "/feed", "POST", { "message": message, "link": link },
-                        function (response) {
-                            if (response && !response.error) {
-                                df.resolve(response);
-                            } else {
-                                df.reject(response);
-                            }
-                        }
-                    );
-                    return df.promise;
-                },
-
-                getGroupInfo: function (groupId) {
-                    var df = $q.defer();
-
-                    FB.api("/" + groupId,
-                        { fields: 'id,name,description,cover' },
-                            function (response) {
-                                if (response && !response.error) {
-                                    df.resolve(response);
-                                }
-                            }
-                    );
-                    return df.promise;
-                }
-            };
-        }
-        ]);
-
-        app.controller('fbController', ['$scope', 'fbService', '$q', function ($scope, fbService, $q) {
-
-            $scope.userStatus = '';
-            $scope.message = '';
-            $scope.link = '';
-            $scope.groupId = '';
-            $scope.savedGroups = (localStorage.getItem("fbPost_savedGroup") === null) ? [] : JSON.parse(localStorage.getItem("fbPost_savedGroup"));
-
-            fbService.init()
-                .then(function (response) { Materialize.toast(response, 2000); })
-                .then(fbService.getStatus)
-                .then(function (response) { $scope.userStatus = 'Logging in as: ' + response.name + '!'; });
-
-            $scope.login = function () {
-                fbService.login()
-                    .then(function (response) {
-                        $scope.userStatus = 'Logging in as: ' + response.name + '!';
-                    });
-            };
-
-            $scope.postMessage = function () {
-                NProgress.start();
-
-                var promises = $scope.savedGroups
-                    .filter(function (gr) { return gr.checked; })
-                    .map(function (gr) { return gr.id; })
-                    .map(function (id) {
-                        return fbService.postMessage(id, $scope.message, $scope.link).then(function (response) {
-                            Materialize.toast("Posted successful with id: " + response.id, 2000);
-                            return response;
-                        });
-                    });
-
-                $q.all(promises).then(function (values) {
-                    Materialize.toast("Posted in " + values.length + " groups.", 5000);
-                    $scope.message = '';
-                    $scope.link = '';
-                    NProgress.done();
-                });
-            };
-
-            $scope.addGroup = function () {
-                NProgress.start();
-                fbService.getGroupInfo($scope.groupId)
-                    .then(function (response) {
-                        NProgress.done();
-                        var foundGroup = $scope.savedGroups.filter(function (gr) {
-                            return gr.id == $scope.groupId;
-                        })[0];
-                        if (foundGroup != null) {
-                            Materialize.toast('Group "' + response.name + '" is already added.', 2000);
-                            return;
-                        };
-                        Materialize.toast('Group "' + response.name + '" added.', 2000);
-                        $scope.groupId = '';
-                        $scope.savedGroups.push(response);
-                    });
-            };
-
-            $scope.deleteGroup = function (group) {
-                $scope.savedGroups = $scope.savedGroups.filter(function (gr) {
-                    return gr.id != group.id;
-                });
-            }
-
-            $scope.saveGroups = function () {
-                localStorage.setItem("fbPost_savedGroup", JSON.stringify($scope.savedGroups));
-                Materialize.toast($scope.savedGroups.length + " groups saved.", 2000);
-            }
-
-        }]);
-    </script>
+    
+    <script type="text/javascript" src="js/app/app.js"></script>
+    <script type="text/javascript" src="js/app/services.js"></script>
+    <script type="text/javascript" src="js/app/controllers.js"></script>
 
     <script>
         (function (d, s, id) {
