--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 
                 <h1 class="header center orange-text text-lighten-2">Facebook Auto Post</h1>
                 <div class="row center">
-                    <h5 class="header col s12 light">Post 1 status lên nhiều group khác nhau</h5>
+                    <h5 class="header col s12 light">Post a message to many facebook groups.</h5>
                 </div>
             </div>
         </div>
